--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Raul Barrue # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  <center>Data Analyst</center>
   <br><br>
-  Second description 
+  <center>Prospective Data Scientist</center> 
   <br><br>
-  <a href="https://github.com/raulbarrue">View My LinkedIn Profile</a> 
+  <a href="www.linkedin.com/in/raulbarrue">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
