--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,10 @@ title: Raul Barrue # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <center>Data Analyst
+  <br>
   Prospective Data Scientist
-  <br><br>
-  <a href="www.linkedin.com/in/raulbarrue">View My LinkedIn Profile</a> </center>
+  <br><br></center>
+  <a href="www.linkedin.com/in/raulbarrue">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
