--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   Prospective Data Scientist
   <br><br></center>
-  <a href="www.linkedin.com/in/raulbarrue">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/raulbarrue">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
